# kuberad

./: Dockerfile  README.md  main.py  pyproject.toml
libs/: apiclients.py
scripts/: kubeconfig.py
