[tool.poetry]
name = "apidetector"
version = "0.1.0"
description = ""
authors = ["Jeremiah LaPierre <jlapierre@istreamplanet.com>"]

[tool.poetry.dependencies]
python = "^3.9"
kubernetes = "^25.3.0"
tabulate = "^0.9.0"
boto3 = "^1.26.32"
Jinja2 = "^3.1.2"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
ipykernel = "^6.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
